# tutor

./: .gitignore  README.md  pyproject.toml
src/: bot.py  container.py
src/agents/: runner.py  runner_old.py
src/agents/telegram_agent/: agent.py
src/agents/telegram_agent/data/: empty_curriculum.json
src/agents/telegram_agent/prompts/: system_prompt.md
src/agents/telegram_agent/tools/: curriculum.py
src/domain/models/: corriculum_state.py
src/infrastructure/: curriculum_repository.py  db_config.py  settings.py  util.py
tests/: test_models.py
